fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   color: var(--color-text);
 
   background-color: var(--color-light);
+  overflow-x:hidden
   }
 
 h1 {
@@ -69,6 +70,7 @@ button {
   outline: none;
   border: none;
   font-size: 1.6rem;
+  line-height: 26px;
   font-weight: 900;
   color: #fff;
   -webkit-border-radius: 30px;
@@ -133,7 +135,8 @@ header {
   flex-direction: column;
   align-items: center;
 
-  margin: 80px 0 194px
+  margin: 80px 0 194px;
+
 }
 
 .logo {
@@ -159,8 +162,6 @@ header .btn-primary {
 }
 
 .header-img-desktop {
-  display: flex;
-  justify-content: space-between;
   width: 100%;
   position: absolute;
   top: 222px;
